syntax = "proto3";

package com.lodny.rwcommon.grpc;

import "common.proto";

option java_multiple_files = true;
option java_package = "com.lodny.rwcommon.grpc.tag";

service Tag {
  rpc registerTags (GrpcRegisterTagsRequest) returns (Empty);
  rpc getTopTagStrings (GrpcTopTagStringsRequest) returns (GrpcTopTagStringsResponse);
  rpc getTagStringsByArticleId (GrpcTagStringsByArticleIdRequest) returns (GrpcTagStringsByArticleIdResponse);
  rpc getArticleIdsByTagString (GrpcArticleIdsByTagStringRequest) returns (GrpcArticleIdsByTagStringResponse);
  rpc deleteTagsByArticleId (GrpcTagsByArticleIdRequest) returns (Empty);
}


message GrpcRegisterTagsRequest {
  int64 articleId = 1;
  repeated string tags = 2;
}


message GrpcTopTagStringsRequest {
  int32 count = 1;
}

message GrpcTopTagStringsResponse {
  repeated string tags = 1;
}


message GrpcTagStringsByArticleIdRequest {
  int64 articleId = 1;
}

message GrpcTagStringsByArticleIdResponse   {
  repeated string tags = 1;
}


message GrpcArticleIdsByTagStringRequest {
  string tagString = 1;
}

message GrpcArticleIdsByTagStringResponse {
  repeated int64 articleId = 1;
}


message GrpcTagsByArticleIdRequest {
  int64 articleId = 1;
}

